apps/llama-cpp/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llm
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
    goldilocks.fairwinds.com/enabled: "true"
